# AI-Skill-AICodingAgentFramework

./: CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  PHILOSOPHY.md  README.md  ROADMAP.md
examples/: README.md  basic.py
skills/: README.md
skills/code_generator/: SKILL.md  main.py
src/: __init__.py  event_bus.py  execution_registry.py  models.py  parser.py  permission.py  plugin_registry.py  query_engine.py  runtime.py  session.py  skill_registry.py  slash_commands.py  task_manager.py  telemetry.py  tool_pool.py  utils.py
src/agent_framework/: __init__.py  execution_registry.py  models.py  permission.py  query_engine.py  runtime.py  tool_pool.py  utils.py
src/agent_framework/cli/: __init__.py  doctor.py  main.py
src/agent_framework/mocks/: __init__.py  harness.py  service.py
src/agent_framework/planning/: __init__.py  planner.py
src/agent_framework/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
src/agent_framework/tools/: __init__.py  base.py  bash.py  file_ops.py  pool.py  search.py  web.py
